--- a/2_coding_our_first_neurons.ipynb
+++ b/2_coding_our_first_neurons.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "## 2.1. A Single Neuron\n",
     "\n",
-    "<center><img src='./image/2-1.png' style='width: 100%'/></center>\n"
+    "<center><img src='./image/2-1.png' style='width: 60%'/></center>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +47,12 @@
    "source": [
     "If we have four inputs for a single neuron:\n",
     "\n",
-    "<center><img src='./image/2-2.png' style='width: 100%'/></center>"
+    "<center><img src='./image/2-2.png' style='width: 60%'/></center>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
     "\n",
     "An example network with 04 inputs and 3 neurons:\n",
     "\n",
-    "<center><img src='./image/2-3.png' style='width: 100%'/></center>\n",
+    "<center><img src='./image/2-3.png' style='width: 60%'/></center>\n",
     "\n",
     "There are three sets of weights and three biases, which define three neurons.\n",
     "\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -330,12 +330,250 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 2.6. A Layer of Neurons with NumPy\n",
+    "\n",
+    "A layer of 3 neurons is used, the weights will be a matrix or list of weight vectors.\n",
+    "\n",
+    "We need to perform the dot product of the weight matrix and the input vector\n",
+    ".\n",
+    "The matrix is considered as a list of vectors, and the dot product is performed one by one with the vector of inputs, returning a list of dot products.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.8   1.21  2.385]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "inputs = [ 1.0 , 2.0 , 3.0 , 2.5 ]\n",
+    "weights = [[ 0.2 , 0.8 , - 0.5 , 1 ], [0.5 , - 0.91 , 0.26 , - 0.5 ], [- 0.26 , - 0.27 , 0.17 , 0.87 ]]\n",
+    "biases = [ 2.0 , 3.0 , 0.5 ]\n",
+    "layer_outputs = np.dot(weights, inputs) + biases\t# for the plain Python list addition, NumPy will convert it to an array internally\n",
+    "print(layer_outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.7. A Batch of Data\n",
+    "\n",
+    "NNs receive data in batches.\n",
+    "\n",
+    "A feature set (an observation or a sample) contains of various features.\n",
+    "\n",
+    "    inputs =[1 ,2 ,3 , 25]\n",
+    "\n",
+    "NNs expect to take in many samples at a time for 2 reasons.\n",
+    "\n",
+    "- It’s faster to train in batches in parallel processing\n",
+    "\n",
+    "- Batches help with generalization during training, training or fitting in batches gives you a higher chance of making more meaningful changes to weights and biases\n",
+    "\n",
+    "<center><img src='./image/2-4.png' style='width: 60%'/></center>\n",
+    "\n",
+    "An example of a batch of observations:\n",
+    "\n",
+    "    inputs = [[1, 2, 3, 2.5], [2, 5, -1, 2], [-1.5, 2.7, 3.3, -0.8]]\n",
+    "   \n",
+    "Each list in this larger list is a sample representing a feature set.\n",
+    "\n",
+    "Now, we have matrix of inputs and a matrix of weights. We need to manage both matrices as lists of vectors and perform dot products on all of them in all combinations, resulting in a list of lists of outputs, or a matrix, this operation is the matrix product."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.8. Matrix Product\n",
+    "\n",
+    "In a matrix product, the size of the second dimension of the left matrix must match the size of the first dimension of the right matrix.\n",
+    "\n",
+    "Row and column vectors are matrices with one of their dimensions being of a size of 1.\n",
+    "\n",
+    "$$\n",
+    "a = \\begin{bmatrix}\n",
+    "1 & 2 & 3 \n",
+    "\\end{bmatrix}\\,\\,\\,\\,\\,\n",
+    "b = \\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "3 \\\\\n",
+    "4\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "ab = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 3 \n",
+    "\\end{bmatrix} \n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "3 \\\\\n",
+    "4\n",
+    "\\end{bmatrix} \n",
+    "= \\big[ 20 \\big]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.9. Transposition of the Matrix Product\n",
+    "\n",
+    "A dot product of two vectors equals a matrix product of a row and column vector.\n",
+    "\n",
+    "$$\n",
+    "\\vec{a} \\cdot \\vec{b} = ab^T = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 3 \n",
+    "\\end{bmatrix} \n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "3 \\\\\n",
+    "4\n",
+    "\\end{bmatrix} \n",
+    "= \\big[ 20 \\big]\n",
+    "$$\n",
+    "\n",
+    "Transposition modifies a matrix in a way that its rows become columns and columns become rows.\n",
+    "\n",
+    "<center><img src='./image/2-5.png' style='width: 60%'/></center>\n",
+    "\n",
+    "<center><img src='./image/2-6.png' style='width: 60%'/></center>\n",
+    "\n",
+    "A row vector is a matrix with size $(1,n)$. It is a $1 \\times n$ array of array of shape $(1,n)$.\n",
+    "\n",
+    "$$\n",
+    "a= \\begin{bmatrix}\n",
+    "a_1 & a_2 & a_3 & \\cdots & a_n \n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[20]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([[ 1 , 2 , 3 ]])\n",
+    "\n",
+    "# To transform a list into a matrix containing a single row, put it in to a list and create numpy array\n",
+    "a = [1, 2, 3]\n",
+    "np.array([a])\n",
+    "\n",
+    "# Or we can turn it into a 1D array and expand dimensions using one of the NumPy abilities.\n",
+    "a = [1, 2, 3]\n",
+    "np.expand_dims(np.array(a), axis = 0)    # add a new dimension at the index of the axis\n",
+    "\n",
+    "a = [ 1 , 2 , 3 ]\n",
+    "b = [ 2 , 3 , 4 ]\n",
+    "a = np.array([a])\n",
+    "b = np.array([b]).T\n",
+    "np.dot(a, b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We achieved the same result as the dot product of two vectors, but performed on matrices and returning a matrix.\n",
+    "\n",
+    "NumPy does not have a dedicated method for performing matrix product – the dot product and matrix product are both implemented in a single method: `np.dot()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.10. A Layer of Neurons & Batch of Data w/ NumPy\n",
+    "\n",
+    "In NNs, we need to perform the matrix product between input and weight matrices.\n",
+    "\n",
+    "We need to transform the second arguments (weights) to turn the row vectors into column vectors.\n",
+    "\n",
+    "- When the inputs are a vector, we can perform the dot product on the inputs and the weights without a transposition.\n",
+    "- When the inputs aee a batch of inputs (a matrix), need to perform matrix product. It takes all of the combinations of rows from the left matrix and columns from the right matrix, performing dot product of them and placing the results in an output array.\n",
+    "- Both arrays have the same shape, but to perform the matrix product, the shape’s value from the index 1 of the first matrix and the index 0 of the second matrix must match.\n",
+    "\n",
+    "The following don’t match.\n",
+    "\n",
+    "<center><img src='./image/2-7.png' style='width: 40%'/></center>\n",
+    "\n",
+    "We should transpose the second array.\n",
+    "\n",
+    "<center><img src='./image/2-8.png' style='width: 40%'/></center>\n",
+    "\n",
+    "We can `np.dot()` on a plain Python list of lists as NumPy will convert them to matrices internally.\n",
+    "\n",
+    "Plain Python list of lists does not support the transposition operation, `.T`, we need NumPy.\n",
+    "\n",
+    "The addition of biases don’t need to convert them to matrices, as NumPy do it internally.\n",
+    "\n",
+    "- Each column of the matrix product result is an output of one neuron.\n",
+    "- The bias vector is added to each row vector – the bias of each neuron needs to be added to all of the results of this neuron performed on all input vectors (samples).\n",
+    "\n",
+    "Our NN takes in a group of samples (inputs) and outputs a group of predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.8    1.21   2.385]\n",
+      " [ 8.9   -1.81   0.2  ]\n",
+      " [ 1.41   1.051  0.026]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "inputs = [[1.0, 2.0, 3.0, 2.5], [2.0, 5.0, -1.0, 2.0], [-1.5, 2.7, 3.3, -0.8]]\n",
+    "weights = [[0.2, 0.8, -0.5, 1.0], [0.5, -0.91, 0.26, -0.5], [-0.26, -0.27, 0.17, 0.87]]\n",
+    "biases = [2.0, 3.0, 0.5]\n",
+    "layer_outputs = np.dot(inputs, np.array(weights).T) + biases\n",
+    "print (layer_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nn",
    "language": "python",
    "name": "python3"
   },
@@ -349,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
