--- a/2_coding_our_first_neurons.ipynb
+++ b/2_coding_our_first_neurons.ipynb
@@ -573,9 +573,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nn",
+   "display_name": "nnfs",
    "language": "python",
-   "name": "python3"
+   "name": "nnfs"
   },
   "language_info": {
    "codemirror_mode": {
