--- a/3_adding_layers.ipynb
+++ b/3_adding_layers.ipynb
@@ -58,11 +58,11 @@
     "\n",
     "Linear data can be fit with or represented by a straight line.\n",
     "\n",
-    "<center><img src='./image/3-2.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line)</i></font>.</center>\n",
+    "<center><img src='./image/3-2.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line).</i></font></center>\n",
     "\n",
     "Non-linear data cannot be represented well by a straight line (linear regressor)\n",
     "\n",
-    "<center><img src='./image/3-3.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line)</i></font>.</center>\n",
+    "<center><img src='./image/3-3.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line).</i></font></center>\n",
     "\n",
     "We can generate data for studying using `nnfs` package. In practice, you have your own dataset. "
    ]
