--- a/5_calculating_network_error_with_loss.ipynb
+++ b/5_calculating_network_error_with_loss.ipynb
@@ -439,7 +439,7 @@
     "    def calculate(self, output, y):\n",
     "        # Calculate sample losses\n",
     "        sample_losses = self.forward(output, y)\n",
-    "        print(\"Hey Um sample losees: \", sample_losses)\n",
+    "        #print(\"Hey Um sample losees: \", sample_losses)\n",
     "        # Calculate mean loss\n",
     "        data_loss = np.mean(sample_losses)\n",
     "        # Return loss\n",
