/  to \ in img src

--- a/2_coding_our_first_neurons.ipynb
+++ b/2_coding_our_first_neurons.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## 2.1. A Single Neuron\n",
     "\n",
-    "<center><img src='./image/2-1.png' style='width: 60%'/></center>\n"
+    "<center><img src='.\\image\\2-1.png' style='width: 60%'/></center>\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "If we have four inputs for a single neuron:\n",
     "\n",
-    "<center><img src='./image/2-2.png' style='width: 60%'/></center>"
+    "<center><img src='.\\image\\2-2.png' style='width: 60%'/></center>"
    ]
   },
   {
@@ -83,7 +83,7 @@
     "\n",
     "An example network with 04 inputs and 3 neurons:\n",
     "\n",
-    "<center><img src='./image/2-3.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\2-3.png' style='width: 60%'/></center>\n",
     "\n",
     "There are three sets of weights and three biases, which define three neurons.\n",
     "\n",
@@ -449,9 +449,9 @@
     "\n",
     "Transposition modifies a matrix in a way that its rows become columns and columns become rows.\n",
     "\n",
-    "<center><img src='./image/2-5.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\2-5.png' style='width: 60%'/></center>\n",
     "\n",
-    "<center><img src='./image/2-6.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\2-6.png' style='width: 60%'/></center>\n",
     "\n",
     "A row vector is a matrix with size $(1,n)$. It is a $1 \\times n$ array of array of shape $(1,n)$.\n",
     "\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "array([[20]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,11 +521,11 @@
     "\n",
     "The following don’t match.\n",
     "\n",
-    "<center><img src='./image/2-7.png' style='width: 40%'/></center>\n",
+    "<center><img src='.\\image\\2-7.png' style='width: 40%'/></center>\n",
     "\n",
     "We should transpose the second array.\n",
     "\n",
-    "<center><img src='./image/2-8.png' style='width: 40%'/></center>\n",
+    "<center><img src='.\\image\\2-8.png' style='width: 40%'/></center>\n",
     "\n",
     "We can `np.dot()` on a plain Python list of lists as NumPy will convert them to matrices internally.\n",
     "\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
