--- a/3_adding_layers.ipynb
+++ b/3_adding_layers.ipynb
@@ -11,14 +11,14 @@
     "\n",
     "We don’t necessarily deal with layers between the input and output layers, thus called “hidden”.\n",
     "\n",
-    "<center><img src='./image/3-1.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\3-1.png' style='width: 60%'/></center>\n",
     "\n",
     "3 neurons in the hidden layer has 3 sets of weights, each set has 4 weights corresponding to 4 inputs.\n",
     "Thus, our initial weights have a shape of (3, 4).\n",
     "\n",
     "To add a new hidden layer, we can have as many weight sets as we want (as many neurons), but each of those weight sets must have 3 discrete weights.\n",
     "\n",
-    "<center><img src='./image/3-2.png' style='width: 60%'/></center>"
+    "<center><img src='.\\image\\3-2.png' style='width: 60%'/></center>"
    ]
   },
   {
@@ -58,11 +58,11 @@
     "\n",
     "Linear data can be fit with or represented by a straight line.\n",
     "\n",
-    "<center><img src='./image/3-2.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line).</i></font></center>\n",
+    "<center><img src='.\\image\\3-2.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line).</i></font></center>\n",
     "\n",
     "Non-linear data cannot be represented well by a straight line (linear regressor)\n",
     "\n",
-    "<center><img src='./image/3-3.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line).</i></font></center>\n",
+    "<center><img src='.\\image\\3-3.png' style='width: 60%'/><font color='gray'><i>Example of data (orange dots) that can be represented (fit) by a straight line (green line).</i></font></center>\n",
     "\n",
     "We can generate data for studying using `nnfs` package. In practice, you have your own dataset. "
    ]
