--- a/4_activation_functions.ipynb
+++ b/4_activation_functions.ipynb
@@ -17,13 +17,13 @@
     "\n",
     "It is rarely a choice nowadays as it is not very informative. The return value does not contain all information about the input (an input of 3 will output the same value as an input of 3000).\n",
     "\n",
-    "<center><img src='./image/4-1.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-1.png' style='width: 60%'/></center>\n",
     "\n",
     "## 4.2. The Linear Activation Function\n",
     "\n",
     "This activation function is usually applied to the last layer’s output in the case of a regression model.\n",
     "\n",
-    "<center><img src='./image/4-2.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-2.png' style='width: 60%'/></center>\n",
     "\n",
     "## 4.3. The Sigmoid Activation Function\n",
     "\n",
@@ -33,7 +33,7 @@
     "\n",
     "The Sigmoid function will be used as the output layer’s activation function.\n",
     "\n",
-    "<center><img src='./image/4-3.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-3.png' style='width: 60%'/></center>\n",
     "\n",
     "The sigmoid function, historically used in hidden layers, was eventually repplaced by the Rectified Linear Units activation function (ReLU).\n",
     "\n",
@@ -45,7 +45,7 @@
     "\n",
     "ReLU activation function is extremely close to being a linear activation function while remaining nonlinear, due to that bend after 0. This simple property is very effective.\n",
     "\n",
-    "<center><img src='./image/4-4.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-4.png' style='width: 60%'/></center>\n",
     "\n",
     "## 4.5. Why Use Activation Function?\n",
     "\n",
@@ -63,21 +63,21 @@
     "\n",
     "A neural network with 2 hidden layers of 8 neurons each, the result of training this model will look like:\n",
     "\n",
-    "<center><img src='./image/4-5.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-5.png' style='width: 60%'/></center>\n",
     "\n",
     "A neural network with 2 hidden layers of 8 neurons each, using the linear activation function:\n",
     "\n",
-    "<center><img src='./image/4-6.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-6.png' style='width: 60%'/></center>\n",
     "\n",
     "The same NN architecture, using the rectified linear activation function:\n",
     "\n",
-    "<center><img src='./image/4-7.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-7.png' style='width: 60%'/></center>\n",
     "\n",
     "## 4.6. Linear Activation in the Hidden Layers\n",
     "\n",
     "Consider a NN with all linear activation functions of $y = x$.\n",
     "\n",
-    "<center><img src='./image/4-8.png' style='width: 60%'/></center>\n",
+    "<center><img src='.\\image\\4-8.png' style='width: 60%'/></center>\n",
     "\n",
     "No matter what we do, how many layers we have, this NN can only depict linear relationships if we use linear activation functions.\n",
     "\n",
@@ -87,22 +87,22 @@
     "\n",
     "How the rectified linear activation function can suddenly map nonlinear relationships and functions?\n",
     "\n",
-    "<center><img src='./image/4-9.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of 0 and a bias of 0.</i></font></center>\n",
+    "<center><img src='.\\image\\4-9.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of 0 and a bias of 0.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-10.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of 1 and a bias of 0.</i></font></center>\n",
+    "<center><img src='.\\image\\4-10.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of 1 and a bias of 0.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-11.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of 1 and a bias of 0.5.</i></font></center>\n",
+    "<center><img src='.\\image\\4-11.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of 1 and a bias of 0.5.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-12.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of -1 and a bias of 0.5. (See when this neuron deactivates)</i></font></center>\n",
+    "<center><img src='.\\image\\4-12.png' style='width: 60%'/><font color='gray'><i>Single neuron with a weight of -1 and a bias of 0.5. (See when this neuron deactivates)</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-13.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron’s bias does no offsetting, output is linear.</i></font></center>\n",
+    "<center><img src='.\\image\\4-13.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron’s bias does no offsetting, output is linear.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-14.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron bias of 1 (shifts the overall function vertically).</i></font></center>\n",
+    "<center><img src='.\\image\\4-14.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron bias of 1 (shifts the overall function vertically).</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-15.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron weight of -2, have both an activation and a deactivation point. When both neurons are activated, “area of effect” comes into play, produce values in the range of the granular variable output. If any neuron in the pair is inactive, the pair will produce non-variable output.\n",
+    "<center><img src='.\\image\\4-15.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron weight of -2, have both an activation and a deactivation point. When both neurons are activated, “area of effect” comes into play, produce values in the range of the granular variable output. If any neuron in the pair is inactive, the pair will produce non-variable output.\n",
     "</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-16.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron weight of -2, “area of effect”.</i></font></center>\n",
+    "<center><img src='.\\image\\4-16.png' style='width: 60%'/><font color='gray'><i>Pair neurons, the 2nd neuron weight of -2, “area of effect”.</i></font></center>\n",
     "\n",
     "## 4.8. ReLU Activation in the Hidden Layers\n",
     "\n",
@@ -118,39 +118,39 @@
     "\n",
     "The hidden layers use the ReLU activation function.\n",
     "\n",
-    "<center><img src='./image/4-17.png' style='width: 60%'/><font color='gray'><i>Start with the first pair of neurons, set all weights to 0.</i></font></center>\n",
+    "<center><img src='.\\image\\4-17.png' style='width: 60%'/><font color='gray'><i>Start with the first pair of neurons, set all weights to 0.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-18.png' style='width: 60%'/><font color='gray'><i>Set weights of the hidden layer neurons and the output neuron to 1.</i></font></center>\n",
+    "<center><img src='.\\image\\4-18.png' style='width: 60%'/><font color='gray'><i>Set weights of the hidden layer neurons and the output neuron to 1.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-19.png' style='width: 60%'/><font color='gray'><i>Adjust the weight for the first neuron of the first layer to 6.</i></font><font color='green'><i> The initial slope is correct.</i></font><font color='red'><i> A problem is this function never ends</i></font><font color='gray'><i> as this neuron pair never deactivates. We want the deactivation to occur where the red fitment line diverges initially from the green sine wave (~ 0.7).</i></font></center>\n",
+    "<center><img src='.\\image\\4-19.png' style='width: 60%'/><font color='gray'><i>Adjust the weight for the first neuron of the first layer to 6.</i></font><font color='green'><i> The initial slope is correct.</i></font><font color='red'><i> A problem is this function never ends</i></font><font color='gray'><i> as this neuron pair never deactivates. We want the deactivation to occur where the red fitment line diverges initially from the green sine wave (~ 0.7).</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-20.png' style='width: 60%'/><font color='gray'><i>Increase the bias for the 2nd neuron to 0.7. This offsets the overall function vertically. </i></font></center>\n",
+    "<center><img src='.\\image\\4-20.png' style='width: 60%'/><font color='gray'><i>Increase the bias for the 2nd neuron to 0.7. This offsets the overall function vertically. </i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-21.png' style='width: 60%'/><font color='gray'><i>Set the weight for the 2nd neuron to -1, causing the deactivation point to occur where we want.</i></font></center>\n",
+    "<center><img src='.\\image\\4-21.png' style='width: 60%'/><font color='gray'><i>Set the weight for the 2nd neuron to -1, causing the deactivation point to occur where we want.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-22.png' style='width: 60%'/><font color='gray'><i>Flip this slope back by seting the weight of the connection to the output neuron to -1. Now we need to offset this up a bit.</i></font></center>\n",
+    "<center><img src='.\\image\\4-22.png' style='width: 60%'/><font color='gray'><i>Flip this slope back by seting the weight of the connection to the output neuron to -1. Now we need to offset this up a bit.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-23.png' style='width: 60%'/><font color='gray'><i>We will use first 7-pairs of neurons in the hidden layers to create the sine wave’s shape, </i></font><font color='green'><i>then the bottom pair to offset everything vertically.</i></font><font color='gray'><i> Now we completed the first section.</i></font></center>\n",
+    "<center><img src='.\\image\\4-23.png' style='width: 60%'/><font color='gray'><i>We will use first 7-pairs of neurons in the hidden layers to create the sine wave’s shape, </i></font><font color='green'><i>then the bottom pair to offset everything vertically.</i></font><font color='gray'><i> Now we completed the first section.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-24.png' style='width: 60%'/><font color='gray'><i>Set all weights for this 2nd pair of neurons to 1, including the output neuron.</i></font><font color='red'><i> The 2nd pair begins activation too soon</i></font><font color='gray'><i>, which impacts the “area of effect” of the top pair that we already aligned.</i></font></center>\n",
+    "<center><img src='.\\image\\4-24.png' style='width: 60%'/><font color='gray'><i>Set all weights for this 2nd pair of neurons to 1, including the output neuron.</i></font><font color='red'><i> The 2nd pair begins activation too soon</i></font><font color='gray'><i>, which impacts the “area of effect” of the top pair that we already aligned.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-25.png' style='width: 60%'/><font color='gray'><i>We want the 2nd pair to start influcing the output where the first pair deactivates, so we want to adjust the function horizontally.</i></font></center>\n",
+    "<center><img src='.\\image\\4-25.png' style='width: 60%'/><font color='gray'><i>We want the 2nd pair to start influcing the output where the first pair deactivates, so we want to adjust the function horizontally.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-26.png' style='width: 60%'/><font color='gray'><i>Flip the 2nd pair’s function segment by flipping the weight to the output neuron.</i></font></center>\n",
+    "<center><img src='.\\image\\4-26.png' style='width: 60%'/><font color='gray'><i>Flip the 2nd pair’s function segment by flipping the weight to the output neuron.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-27.png' style='width: 60%'/><font color='gray'><i>Use the bottom pair to fix the vertical offset.</i></font></center>\n",
+    "<center><img src='.\\image\\4-27.png' style='width: 60%'/><font color='gray'><i>Use the bottom pair to fix the vertical offset.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-28.png' style='width: 60%'/><font color='gray'><i>Continue the method, begin the activation for the 3rd pair of hidden layer neurons when we wish the slope to start going down.</i></font></center>\n",
+    "<center><img src='.\\image\\4-28.png' style='width: 60%'/><font color='gray'><i>Continue the method, begin the activation for the 3rd pair of hidden layer neurons when we wish the slope to start going down.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-29.png' style='width: 60%'/><font color='gray'><i>Repeat the process for each section, giving us a final result.</i></font></center>\n",
+    "<center><img src='.\\image\\4-29.png' style='width: 60%'/><font color='gray'><i>Repeat the process for each section, giving us a final result.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-30.png' style='width: 60%'/><font color='gray'><i>Pass data through, the neuron’s areas of effect come into play – only when both neurons are activated based on input. With input 0.08, the only pairs activated are the top ones, as this is their area of effect.</i></font></center>\n",
+    "<center><img src='.\\image\\4-30.png' style='width: 60%'/><font color='gray'><i>Pass data through, the neuron’s areas of effect come into play – only when both neurons are activated based on input. With input 0.08, the only pairs activated are the top ones, as this is their area of effect.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-31.png' style='width: 60%'/><font color='gray'><i>With input 0.51, the 4th pair of neurons is activated. Even without any of the other weights, with ReLU we can fit the sine wave pretty well.</i></font></center>\n",
+    "<center><img src='.\\image\\4-31.png' style='width: 60%'/><font color='gray'><i>With input 0.51, the 4th pair of neurons is activated. Even without any of the other weights, with ReLU we can fit the sine wave pretty well.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-32.png' style='width: 60%'/><font color='gray'><i>If we enable all of the weights now and allow a mathematical optimizer to train, we can see even better fitment.</i></font></center>\n",
+    "<center><img src='.\\image\\4-32.png' style='width: 60%'/><font color='gray'><i>If we enable all of the weights now and allow a mathematical optimizer to train, we can see even better fitment.</i></font></center>\n",
     "\n",
-    "<center><img src='./image/4-33.png' style='width: 60%'/><font color='gray'><i>More neurons can enable more unique areas of effect, we need two or more hidden layers, we need nonlinear activation functions to map nonlinear problems.</i></font></center>\n",
+    "<center><img src='.\\image\\4-33.png' style='width: 60%'/><font color='gray'><i>More neurons can enable more unique areas of effect, we need two or more hidden layers, we need nonlinear activation functions to map nonlinear problems.</i></font></center>\n",
     "\n",
     "\n",
     "\n",
@@ -342,7 +342,7 @@
     "\n",
     "$z_{i,j}$ means a singular output value, the index $i$ means the current sample and the index $j$ means the current output in this sample.\n",
     "\n",
-    "<center><img src='./image/4-34.png' style='width: 60%'/><font color='gray'><i>Graph of an exponential function.</i></font></center>\n"
+    "<center><img src='.\\image\\4-34.png' style='width: 60%'/><font color='gray'><i>Graph of an exponential function.</i></font></center>\n"
    ]
   },
   {
@@ -508,7 +508,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_46008\\915342352.py:6: RuntimeWarning: overflow encountered in exp\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_50408\\915342352.py:6: RuntimeWarning: overflow encountered in exp\n",
       "  print(np.exp(1000))\n"
      ]
     }
