--- a/1_introducing_neural_networks.ipynb
+++ b/1_introducing_neural_networks.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Most NNs in use are a form of deep learning.\n",
     "\n",
-    "<center><img src='./image/1-1-ai-complete-graph.jpeg' style='width: 100%'/></center>\n",
+    "<center><img src='.\\image\\1-1-ai-complete-graph.jpeg' style='width: 80%'/></center>\n",
     "\n",
     "## 1.1. A Brief History\n",
     "\n",
@@ -36,7 +36,7 @@
     "\n",
     "NNs are considered “black boxes” between inputs and outputs.\n",
     "\n",
-    "<center><img src='./image/1-2-example-nn.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-2-example-nn.png' style='width: 60%'/></center>\n",
     "\n",
     "Each connection between neurons has a weight associated with it. Weights are multiplied by corresponding input values. These multiplications flow into the neuron and are summed before being added with a bias. Weights and biases are trainable or tunable.\n",
     "\n",
@@ -49,17 +49,17 @@
     "\n",
     "Adjusting the weight will impact the slope of the function.\n",
     "\n",
-    "<center><img src='./image/1-3-adjust-weight.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-3-adjust-weight.png' style='width: 60%'/></center>\n",
     "\n",
-    "<center><img src='./image/1-4-adjust-weight.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-4-adjust-weight.png' style='width: 60%'/></center>\n",
     "\n",
-    "<center><img src='./image/1-5-adjust-weight.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-5-adjust-weight.png' style='width: 60%'/></center>\n",
     "\n",
     "The bias offsets the overall function.\n",
     "\n",
-    "<center><img src='./image/1-6-adjust-bias.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-6-adjust-bias.png' style='width: 60%'/></center>\n",
     "\n",
-    "<center><img src='./image/1-7-adjust-bias.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-7-adjust-bias.png' style='width: 60%'/></center>\n",
     "\n",
     "Weights and biases impact the outputs of neurons in slightly different ways.\n",
     "\n",
@@ -80,7 +80,7 @@
     "\n",
     "Example basic neural networks:\n",
     "\n",
-    "<center><img src='./image/1-8-basic-nn.png' style='width: 80%'/></center>\n",
+    "<center><img src='.\\image\\1-8-basic-nn.png' style='width: 60%'/></center>\n",
     "\n",
     "The input layer represents the actual input data (i.e., pixel values from an image, temperature, …)\n",
     "\n",
@@ -95,19 +95,19 @@
     "- The output layer has two neurons, one associated with “dog” and one associated with “cat”.\n",
     "- Can have just a single output neuron that is “dog” or “not dog”.\n",
     "\n",
-    "<center><img src='./image/1-9-nn-dog.png' style='width: 90%'/></center>\n",
+    "<center><img src='.\\image\\1-9-nn-dog.png' style='width: 60%'/></center>\n",
     "\n",
-    "<center><img src='./image/1-10-nn-dog.png' style='width: 90%'/></center>\n",
+    "<center><img src='.\\image\\1-10-nn-dog.png' style='width: 60%'/></center>\n",
     "\n",
     "The math involved makes NNs appear challenging and how scary it can sometimes look.\n",
     "\n",
     "The full formula for the forward pass of an example NN model:\n",
     "\n",
-    "<center><img src='./image/1-11-loss-function.png' style='width: 100%'/></center>\n",
+    "<center><img src='.\\image\\1-11-loss-function.png' style='width: 90%'/></center>\n",
     "\n",
     "This function can also be represented in nested python functions like:\n",
     "\n",
-    "<center><img src='./image/1-12-loss-function-code.png' style='width: 100%'/></center>\n",
+    "<center><img src='.\\image\\1-12-loss-function-code.png' style='width: 80%'/></center>\n",
     "\n",
     "High school algebra is enough to understand:\n",
     "- A log function\n",
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
