--- a/7_derivatives.ipynb
+++ b/7_derivatives.ipynb
@@ -421,7 +421,86 @@
     "\n",
     "\n",
     "## 7.4. The Analytical Derivative\n",
-    "\n"
+    "\n",
+    "Numerical derivative is an approximation and never gets more complicated.\n",
+    "\n",
+    "Analytical derivative is exact and quicker solution, but the complexity varies.\n",
+    "\n",
+    "The prime notation and Leibniz's notation have the same meaning.\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "f'(x) = \\frac{d}{dx} f(x) = \\frac{df}{dx} (x) = \\frac{d \\ f(x)}{dx}\n",
+    "$$\n",
+    "\n",
+    "The derivative of constants:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} 1 = 0\n",
+    "\\frac{d}{dx} m = 0\n",
+    "$$\n",
+    "\n",
+    "The derivative of $x$:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} x = 1\n",
+    "$$\n",
+    "\n",
+    "The derivative of a linear function equals its slope:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} mx + b= m\n",
+    "$$\n",
+    "\n",
+    "The derivative of a constant multiple of the function.\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} \\big[ k \\cdot f(x)  \\big] = k \\cdot \\frac{d}{dx}  f(x)\n",
+    "$$\n",
+    "\n",
+    "The derivative of a sum of functions equals their derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} \\big[ f(x) + g(x) \\big]  = \\frac{d}{dx} f(x) + \\frac{d}{dx} g(x) = f'(x) + g'(x)\n",
+    "$$\n",
+    "\n",
+    "The same concept applies to subtraction:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} \\big[ f(x) - g(x)  \\big] = \\frac{d}{dx}  f(x) - \\frac{d}{dx}  g(x) = f'(x) - g'(x)\n",
+    "$$\n",
+    "\n",
+    "The derivative of an exponentiation:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dx} x^n= n \\cdot x^{n-1}\n",
+    "$$\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "f(x) = 5x^5 + 4x^3 - 5 \\quad \\to \\quad \\frac{d}{dx} f(x) & = \\frac{d}{dx} \\big[ 5x^5 + 4x^3 - 5 \\big] \\\\\n",
+    "& = \\frac{d}{dx} 5x^5 + \\frac{d}{dx}4x^3  - \\frac{d}{dx} 5 \\\\\n",
+    "& = 5 \\cdot \\frac{d}{dx} x^5 + 4 \\cdot \\frac{d}{dx} x^3 - \\frac{d}{dx} 5 \\\\\n",
+    "& = 5 \\cdot 5 x^{5-1} + 4 \\cdot 3x^{3-1} - 0 \\\\\n",
+    "& = 5 \\cdot 5 x^4 + 4 \\cdot 3x^2 \\\\\n",
+    "& = 25 x^4 + 12 x^2 \\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "f(x) = x^3 + 2x^2 - 5x + 7  \\quad \\to \\quad \\frac{d}{dx} f(x) & = \\frac{d}{dx} \\big[ x^3 + 2x^2 - 5x + 7 \\big] \\\\\n",
+    "& = \\frac{d}{dx} x^3 + \\frac{d}{dx} 2x^2 - \\frac{d}{dx} 5x + \\frac{d}{dx} 7 \\\\\n",
+    "& = \\frac{d}{dx} x^3 + 2 \\cdot \\frac{d}{dx} x^2 - 5 \\cdot \\frac{d}{dx} x + \\frac{d}{dx} 7 \\\\\n",
+    "& = 3x^{3-1} + 2 \\cdot 2x^{2-1} - 5 \\cdot 1 x^{1-1} + 0 \\\\\n",
+    "& = 3x^2 + 2 \\cdot 2 x^1 - 5 \\cdot 1 + 0 \\\\\n",
+    "& = 3x^2 + 4x - 5 \\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "We will go a step further and cover partial derivatives in the next chapter.\n"
    ]
   },
   {
