--- a/9_backpropagation.ipynb
+++ b/9_backpropagation.ipynb
@@ -539,13 +539,184 @@
    "id": "d0dcfaee",
    "metadata": {},
    "source": [
-    "We've successfully decreased this neuron's output from $6.000$ to $5.985$."
+    "We've successfully decreased this neuron's output from $6.000$ to $5.985$.\n",
+    "\n",
+    "It does not make sense to decrease the neuron's output in a real neural network. We do this as a simpler exercise.\n",
+    "\n",
+    "We want to decrease the loss value, which is the last calculation in the chain of calculations during the forward pass, and it's the first one to calculate the gradient during the backpropagation.\n",
+    "\n",
+    "## 9.5. List of samples and a layer of neurons\n",
+    "\n",
+    "### A singular sample\n",
+    "\n",
+    "A single neuron of the current layer connects to all of them — they all receive the output of this neuron.\n",
+    "\n",
+    "What happen during backpropagation?\n",
+    "\n",
+    "Each neuron from the next layer will return a partial derivative of its function w.r.t all of its inputs.\n",
+    "\n",
+    "The neuron in the current layer will receive a vector consisting of these derivatives.\n",
+    "\n",
+    "To continue backpropagation, we need to sum this vector to be a singular value for a singular neuron.\n",
+    "\n",
+    "For a layer of neurons, it'll be a list of these vectors, or a 2D array.\n",
+    "\n",
+    "To apply the chain rule, we need to multiply them by the gradient from the subsequent function.\n",
+    "\n",
+    "We should perform a sum along the inputs - the first input to all of the neurons, the second input, and so on. So we have to sum columns.\n",
+    "\n",
+    "The array of partial derivatives w.r.t all of the inputs equals the array of weights.\n",
+    "\n",
+    "Since the array is transposed, we need to sum its rows instead of columns.\n",
+    "\n",
+    "Then we calculate the gradient for the next layer in backpropagation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9ecb92a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.44  0.44  0.44]\n",
+      " [-0.38 -0.38 -0.38]\n",
+      " [-0.07 -0.07 -0.07]\n",
+      " [ 1.37  1.37  1.37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Passed in gradient from the next layer\n",
+    "# for the purpose of this example we're going to use\n",
+    "# a vector of 1s\n",
+    "dvalues = np.array([[1., 1., 1.]])\n",
+    "\n",
+    "# We have 3 sets of weights - one set for each neuron\n",
+    "# we have 4 inputs, thus 4 weights\n",
+    "# recall that we keep weights transposed\n",
+    "weights = np.array([[0.2, 0.8, -0.5, 1],\n",
+    "                    [0.5, -0.91 , 0.26, -0.5],\n",
+    "                    [-0.26, -0.27 , 0.17, 0.87]]).T\n",
+    "\n",
+    "# sum weights of given input\n",
+    "# and multiply by the passed in gradient for this neuron\n",
+    "dx0 = sum(weights[0]) * dvalues[0]\n",
+    "dx1 = sum(weights[1]) * dvalues[0]\n",
+    "dx2 = sum(weights[2]) * dvalues[0]\n",
+    "dx3 = sum(weights[3]) * dvalues[0]\n",
+    "\n",
+    "# the gradient of the neuron function with respect to inputsm\n",
+    "dinputs = np.array([dx0, dx1, dx2, dx3])\n",
+    "\n",
+    "print(dinputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88033c9f",
+   "metadata": {},
+   "source": [
+    "We can achieve the same result by using the `np.dot` function. \n",
+    "\n",
+    "Recall, we have one partial derivative for each neuron and multiply it by the neuron’s partial derivative with respect to its input.\n",
+    "\n",
+    "Then, multiply each of these gradients with each of the partial derivatives that are related to this neuron’s inputs.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d9b617a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.44 -0.38 -0.07  1.37]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Passed in gradient from the next layer\n",
+    "# for the purpose of this example we're going to use\n",
+    "# a vector of 1s\n",
+    "dvalues = np.array([[ 1. , 1. , 1. ]])\n",
+    "\n",
+    "# We have 3 sets of weights - one set for each neuron\n",
+    "# we have 4 inputs, thus 4 weights\n",
+    "# recall that we keep weights transposed\n",
+    "weights = np.array([[ 0.2 , 0.8 , - 0.5 , 1 ],\n",
+    "                    [ 0.5 , - 0.91 , 0.26 , - 0.5 ],\n",
+    "                    [ - 0.26 , - 0.27 , 0.17 , 0.87 ]]).T\n",
+    "\n",
+    "# sum weights of given input\n",
+    "# and multiply by the passed in gradient for this neuron\n",
+    "dinputs = np.dot(dvalues[ 0 ], weights.T)\n",
+    "\n",
+    "print (dinputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2367bb70",
+   "metadata": {},
+   "source": [
+    "### A batch of samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "af991f6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.44 -0.38 -0.07  1.37]\n",
+      " [ 0.88 -0.76 -0.14  2.74]\n",
+      " [ 1.32 -1.14 -0.21  4.11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Passed in gradient from the next layer\n",
+    "# for the purpose of this example we're going to use\n",
+    "# an array of an incremental gradient values\n",
+    "dvalues = np.array([[ 1. , 1. , 1. ],\n",
+    "                    [ 2. , 2. , 2. ],\n",
+    "                    [ 3. , 3. , 3. ]])\n",
+    "\n",
+    "# We have 3 sets of weights - one set for each neuron\n",
+    "# we have 4 inputs, thus 4 weights\n",
+    "# recall that we keep weights transposed\n",
+    "weights = np.array([[ 0.2 , 0.8 , - 0.5 , 1 ],\n",
+    "                    [ 0.5 , - 0.91 , 0.26 , - 0.5 ],\n",
+    "                    [ - 0.26 , - 0.27 , 0.17 , 0.87 ]]).T\n",
+    "\n",
+    "# sum weights of given input\n",
+    "# and multiply by the passed in gradient for this neuron\n",
+    "dinputs = np.dot(dvalues, weights.T)\n",
+    "\n",
+    "print (dinputs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ecb92a0",
+   "id": "8574b3c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -553,9 +724,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nnfs",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nnfs"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -567,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
