--- a/9_backpropagation.ipynb
+++ b/9_backpropagation.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "9ecb92a0",
    "metadata": {},
    "outputs": [
@@ -582,10 +582,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.44  0.44  0.44]\n",
-      " [-0.38 -0.38 -0.38]\n",
-      " [-0.07 -0.07 -0.07]\n",
-      " [ 1.37  1.37  1.37]]\n"
+      "[ 0.44 -0.38 -0.07  1.37]\n"
      ]
     }
    ],
@@ -606,10 +603,10 @@
     "\n",
     "# sum weights of given input\n",
     "# and multiply by the passed in gradient for this neuron\n",
-    "dx0 = sum(weights[0]) * dvalues[0]\n",
-    "dx1 = sum(weights[1]) * dvalues[0]\n",
-    "dx2 = sum(weights[2]) * dvalues[0]\n",
-    "dx3 = sum(weights[3]) * dvalues[0]\n",
+    "dx0 = sum(weights[0] * dvalues[0])\n",
+    "dx1 = sum(weights[1] * dvalues[0])\n",
+    "dx2 = sum(weights[2] * dvalues[0])\n",
+    "dx3 = sum(weights[3] * dvalues[0])\n",
     "\n",
     "# the gradient of the neuron function with respect to inputsm\n",
     "dinputs = np.array([dx0, dx1, dx2, dx3])\n",
@@ -904,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "d5b09f43",
    "metadata": {},
    "outputs": [
@@ -912,11 +909,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.179515   0.5003665 -0.262746 ]\n",
-      " [ 0.742093  -0.9152577 -0.2758402]\n",
-      " [-0.510153   0.2529017  0.1629592]\n",
-      " [ 0.971328  -0.5021842  0.8636583]]\n",
-      "[[1.98489  2.997739 0.497389]]\n"
+      "[[ 0.1995  0.5035 -0.2605]\n",
+      " [ 0.7799 -0.9201 -0.2901]\n",
+      " [-0.5109  0.2471  0.1591]\n",
+      " [ 0.9959 -0.5001  0.8659]]\n",
+      "[[1.994 2.996 0.494]]\n"
      ]
     }
    ],
@@ -952,7 +949,7 @@
     "# Let's optimize and test backpropagation here\n",
     "# ReLU activation - simulates derivative with respect to input values\n",
     "# from next layer passed to current layer during backpropagation\n",
-    "drelu = relu_outputs.copy()\n",
+    "drelu = dvalues.copy()\n",
     "drelu[layer_outputs <= 0] = 0\n",
     "\n",
     "# Dense layer\n",
