--- a/0_set_up_working_environments.ipynb
+++ b/0_set_up_working_environments.ipynb
@@ -63,9 +63,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nnfs",
    "language": "python",
-   "name": "python3"
+   "name": "nnfs"
   },
   "language_info": {
    "codemirror_mode": {
@@ -77,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
